@@ -1,4 +1,9 @@
 go /test_global_form
 
 ## this will break if the global form cannot be 'clicked on' by mechanize
-fv 1 hello hi
+fv 1 global_form_entry hi
+
+## test for self-inflicted bug regarding select_form
+go /test_global_form
+fv 2 hello world
+submit
