@@ -443,11 +443,12 @@ class Browser(UserAgentBase):
 
         global_form = self.global_form()
         if global_form.controls:
-            if name is not None and name == global_form.name:
+            if (name is not None and name == global_form.name) or \
+               (predicate is not None and predicate(global_form)):
+                
                 self.form = global_form
-            if predicate is not None and predicate(global_form):
-                self.form = global_form
-            return
+                
+                return
 
         orig_nr = nr
         for form in self.forms():
