@@ -1,3 +1,9 @@
+2007-03-19  Titus Brown  <t@localhost.localdomain>
+
+	* Fixed bug in my patch to mechanize 'select_form'.
+
+	* Removed debug 'print' in wsgi_intercept.py.
+
 2007-03-06  Titus Brown  <t@localhost.localdomain>
 
 	* RELEASE 0.9b1.
